[package]
name = "rusemi"
version = "0.1.0"
edition = "2021"
authors= ["Icaro Ferre"]
license="MIT"
categories = ["command-line-utilities"]
repository="https://github.com/icaroferre/rusemi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
coremidi = "^0.6.0"
chrono = "0.4.19"